--- a/index.html
+++ b/index.html
@@ -65,6 +65,43 @@
             padding-top: 20px;
             width: 500px;
         }
+        @media screen and (max-width: 1000px){
+            .main{
+                width: 500px;
+            }
+            .nav-item{
+                font-size: 15px;
+            }
+            .test-text{
+                font-size: 20px;
+            }
+        }
+        @media screen and (max-width: 618px){
+            .main{
+                width: 300px;
+            }
+            .title-text{
+                font-size: 40px;
+            }
+            .sub-title-text{
+                font-size: 20px;
+            }
+            .nav-item{
+                font-size: 15px;
+            }
+            .test-text{
+                font-size: 15px;
+            }
+            .sans{
+                flex-direction: column;
+            }
+            .img-text{
+                font-size: 30px;
+            }
+            .main{
+                overflow-x: hidden;
+            }
+        }
     </style>
 </head>
 <body>
