--- a/index.html
+++ b/index.html
@@ -3,136 +3,109 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>테스트 페이지</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+    <title>잡채1</title>
     <style>
-        *{
-            padding: 0;
-            margin: 0;
-        }
         body{
             font-family: 'Noto Sans KR', sans-serif;
         }
-        .test-text{
-            font-size: 30px;
-            font-weight: 500;
-            padding-left: 20px;
-            padding-top: 20px;
-            padding-bottom: 20px;
+        *{
+            margin: 0;
+            padding: 0;
         }
-        .nav{
+        .navbar{
+            padding-top: 10px;
+            background-color: #dfdfdf;
+            padding-bottom: 10px;
             display: flex;
             align-items: center;
-            border-bottom: solid black 2px;
+        }
+        .nav-text{
+            padding-left: 20px;
+            color: #444444;
+            font-weight: 900;
+            font-size: 30px;
         }
         .nav-right{
             margin-left: auto;
-            display: flex;
         }
         .nav-item{
-            margin-right: 20px;
-            font-weight: 400;
-            color: black;
-        }
-        a{
+            font-size: 20px;
+            font-weight: 700;
+            padding-right: 20px;
+            color: #b1b1b1;
             text-decoration: none;
         }
         .nav-item:hover{
-            color: darkgray;
-            font-weight: 500px;
+            color: #444444
         }
         .title-text{
-            text-align: center;
-            font-weight: 700;
+            padding-top: 40px;
             font-size: 100px;
-        }
-        .sub-title-text{
+            font-weight: 900;
             text-align: center;
-            font-weight: 300;
+        }
+        .subtitle-text{
+            padding-top: 40px;
             font-size: 30px;
+            font-weight: 400;
+            text-align: center;
         }
         .main{
+            width: 800px;
             margin: 0 auto;
-            width: 1000px;
         }
-        .img-text{
-            padding-left: 20px;
-            font-size: 100px;
-        }
-        .sans{
-            margin: 0 auto;
+        .image{
+            padding-top: 50px;
             display: flex;
-            padding-top: 20px;
-            width: 500px;
+            align-items: center;
+            margin: 0 auto;
+            width: 600px;
         }
-        @media screen and (max-width: 1000px){
-            .main{
-                width: 500px;
-            }
-            .nav-item{
-                font-size: 15px;
-            }
-            .test-text{
-                font-size: 20px;
-            }
+        .img-desc{
+            padding-left: 20px;
+            font-size: 50px;
+            font-weight: 400;
         }
-        @media screen and (max-width: 618px){
-            .main{
-                width: 300px;
-            }
-            .title-text{
-                font-size: 40px;
-            }
-            .sub-title-text{
-                font-size: 20px;
-            }
-            .nav-item{
-                font-size: 15px;
-            }
-            .test-text{
-                font-size: 15px;
-            }
-            .sans{
-                flex-direction: column;
-            }
-            .img-text{
-                font-size: 30px;
-            }
-            .main,.nav{
-                overflow-x: hidden;
-            }
+        .footer{
+            margin-top: 20px;
+            padding-top: 5px;
+            padding-bottom: 5px;
+            background-color: #ebebeb;
+        }
+        .footer-text{
+            padding-left: 20px;
+            color: #b1b1b1;
         }
     </style>
 </head>
 <body>
-    <div class="nav">
-        <div class="test-text">테스트 페이지입니다.</div>
+    <div class="navbar">
+        <div class="nav-text">Yee company</div>
         <div class="nav-right">
-            <a href="#"><div class="nav-item">테스트 버튼1</div></a>
-            <a href="#"><div class="nav-item">테스트 버튼2</div></a>
-            <a href="#"><div class="nav-item">테스트 버튼3</div></a>
-            <a href="#"><div class="nav-item">테스트 버튼4</div></a>
+            <a class="nav-item" href="#">Purchase</a>
+            <a class="nav-item" href="#">About</a>
+            <a class="nav-item" href="#">Sign In</a>
         </div>
     </div>
     <div class="main">
-        <div class="title-text">Lorem Ipsum</div>
-        <div class="sub-title-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et lorem convallis, convallis diam nec, efficitur nunc. Sed vitae porta diam. Nullam sollicitudin arcu est, non luctus orci euismod vitae. Sed vulputate tortor vel libero ornare, quis volutpat odio vehicula. Pellentesque suscipit vestibulum risus, porttitor ornare lorem tincidunt sit amet.</div>
-        <div class="sans">
-            <div class="img"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/0/01/Sans_undertale.jpg/220px-Sans_undertale.jpg" alt="SANS!!!!"></div>
-            <div class="img-text">WOW!!!! sans!!!!!!</div>
+        <div class="title-text">Welcome</div>
+        <div class="subtitle-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum neque voluptatem dolores natus facere! Atque ratione eaque quidem consequuntur animi. Sunt, maxime minus vero delectus beatae excepturi ullam porro dolor?</div>
+        <div class="image">
+            <img src="https://upload.wikimedia.org/wikipedia/ko/1/19/Yee_Oro.PNG" alt="yee pic">
+            <div class="img-desc">this is our ceo, YEE!!!</div>
         </div>
-        <div class="sans">
-            <div class="img"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/0/01/Sans_undertale.jpg/220px-Sans_undertale.jpg" alt="SANS!!!!"></div>
-            <div class="img-text">WOW!!!! sans!!!!!!</div>
+        <div class="image">
+            <img src="https://upload.wikimedia.org/wikipedia/ko/1/19/Yee_Oro.PNG" alt="yee pic">
+            <div class="img-desc">this is our ceo, YEE!!!</div>
         </div>
-        <div class="sans">
-            <div class="img"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/0/01/Sans_undertale.jpg/220px-Sans_undertale.jpg" alt="SANS!!!!"></div>
-            <div class="img-text">WOW!!!! sans!!!!!!</div>
+        <div class="image">
+            <img src="https://upload.wikimedia.org/wikipedia/ko/1/19/Yee_Oro.PNG" alt="yee pic">
+            <div class="img-desc">this is our ceo, YEE!!!</div>
         </div>
-        <div class="sans">
-            <div class="img"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/0/01/Sans_undertale.jpg/220px-Sans_undertale.jpg" alt="SANS!!!!"></div>
-            <div class="img-text">WOW!!!! sans!!!!!!</div>
-        </div>
+    </div>
+    <div class="footer">
+        <div class="footer-text">©2020 Yee company. all rights reversed.</div>
     </div>
 </body>
 </html>
